--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -134,3 +134,11 @@ jobs:
 
         # Clean up
         Remove-Item -Recurse -Force 'C:\mitamae_test' -ErrorAction SilentlyContinue
+
+    - name: Run mruby gem compatibility test
+      run: |
+        .\mitamae-build\mitamae-x86_64-windows.exe local -l info spec/windows/gem_compatibility_test.rb
+
+    - name: Run Windows path compatibility test
+      run: |
+        .\mitamae-build\mitamae-x86_64-windows.exe local -l info spec/recipes/windows_path_test.rb
