Fix Windows builds by setting MRUBY_YAML_USE_SYSTEM_LIBRARY=1
The mruby-yaml gem's bootstrap script fails on Windows.
Setting this environment variable tells mruby-yaml to use system
libyaml instead of building from source.

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -38,6 +38,8 @@ jobs:
         choco install mingw -y --force
 
     - name: Build mitamae
+      env:
+        MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
       run: |
         rake "release:build:windows-x86_64"
 
