--- a/.github/workflows/windows-package-test.yml
+++ b/.github/workflows/windows-package-test.yml
@@ -37,6 +37,8 @@ jobs:
         choco install mingw -y --force
 
     - name: Build mitamae
+      env:
+        MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
       run: |
         rake "release:build:windows-x86_64"
 
@@ -113,6 +115,8 @@ jobs:
         choco install mingw -y --force
 
     - name: Build mitamae
+      env:
+        MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
       run: |
         rake "release:build:windows-x86_64"
 
@@ -180,6 +184,8 @@ jobs:
         choco install mingw -y --force
 
     - name: Build mitamae
+      env:
+        MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
       run: |
         rake "release:build:windows-x86_64"
 
