Fix Windows build by adding oniguruma installation to workflows
- Add oniguruma installation via vcpkg/Chocolatey to windows.yml
- Add same to test-windows.yml and windows-package-test.yml
- This addresses mruby-onig-regexp dependency issue blocking Windows builds

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -37,6 +37,18 @@ jobs:
         gem install rake
         choco install mingw -y --force
 
+        # Install oniguruma for mruby-onig-regexp
+        # Try vcpkg first, fall back to building from source if needed
+        if (Test-Path "C:\vcpkg\vcpkg.exe") {
+          C:\vcpkg\vcpkg.exe install oniguruma:x64-windows
+        } else {
+          Write-Host "vcpkg not found, trying Chocolatey..."
+          choco install oniguruma -y --force 2>&1 | Out-Null
+          if ($LASTEXITCODE -ne 0) {
+            Write-Host "Oniguruma not available via package manager, mruby will bundle it"
+          }
+        }
+
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
