--- a/.github/workflows/windows-package-test.yml
+++ b/.github/workflows/windows-package-test.yml
@@ -36,6 +36,9 @@ jobs:
         gem install rake
         choco install mingw -y --force
 
+        # Install pkg-config for library detection
+        choco install pkg-config -y --force
+
         # Install oniguruma for mruby-onig-regexp
         # Try vcpkg first, fall back to building from source if needed
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
@@ -51,6 +54,7 @@ jobs:
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        PKG_CONFIG_PATH: "C:/vcpkg/packages/oniguruma_x64-windows/lib/pkgconfig;C:/vcpkg/installed/x64-windows/lib/pkgconfig"
       run: |
         rake "release:build:windows-x86_64"
 
@@ -126,6 +130,9 @@ jobs:
         gem install rake
         choco install mingw -y --force
 
+        # Install pkg-config for library detection
+        choco install pkg-config -y --force
+
         # Install oniguruma for mruby-onig-regexp
         # Try vcpkg first, fall back to building from source if needed
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
@@ -141,6 +148,7 @@ jobs:
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        PKG_CONFIG_PATH: "C:/vcpkg/packages/oniguruma_x64-windows/lib/pkgconfig;C:/vcpkg/installed/x64-windows/lib/pkgconfig"
       run: |
         rake "release:build:windows-x86_64"
 
@@ -198,14 +206,13 @@ jobs:
     - name: Setup Zig
       run: |
         $ZigVersion = "0.10.1"
-        Invoke-WebRequest -Uri "https://ziglang.org/download/$ZigVersion/zig-windows-x86_64-$ZigVersion.zip" -OutFile zig.zip
-        Expand-Archive -Path zig.zip -DestinationPath C:\zig
-        echo "C:\zig\zig-windows-x86_64-$ZigVersion" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
     - name: Install dependencies
       run: |
         gem install rake
         choco install mingw -y --force
+
+        # Install pkg-config for library detection
+        choco install pkg-config -y --force
 
         # Install oniguruma for mruby-onig-regexp
         # Try vcpkg first, fall back to building from source if needed
@@ -218,10 +225,10 @@ jobs:
             Write-Host "Oniguruma not available via package manager, mruby will bundle it"
           }
         }
-
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        PKG_CONFIG_PATH: "C:/vcpkg/packages/oniguruma_x64-windows/lib/pkgconfig;C:/vcpkg/installed/x64-windows/lib/pkgconfig"
       run: |
         rake "release:build:windows-x86_64"
 
