--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -41,11 +41,19 @@ jobs:
           choco install mingw --x86 -y --force
         }
 
+        # Install pkg-config for library detection
+        choco install pkg-config -y --force
+
         # Install oniguruma for mruby-onig-regexp
         # Try vcpkg first, fall back to building from source if needed
         if (Test-Path "C:\vcpkg\vcpkg.exe") {
-          C:\vcpkg\vcpkg.exe install oniguruma:x86-windows
-          C:\vcpkg\vcpkg.exe install oniguruma:x64-windows
+          if ("${{ matrix.target }}" -eq "windows-x86_64") {
+            C:\vcpkg\vcpkg.exe install oniguruma:x64-windows
+            $env:PKG_CONFIG_PATH = "C:\vcpkg\installed\x64-windows\lib\pkgconfig"
+          } else {
+            C:\vcpkg\vcpkg.exe install oniguruma:x86-windows
+            $env:PKG_CONFIG_PATH = "C:\vcpkg\installed\x86-windows\lib\pkgconfig"
+          }
         } else {
           Write-Host "vcpkg not found, trying Chocolatey..."
           choco install oniguruma -y --force 2>&1 | Out-Null
@@ -57,6 +65,7 @@ jobs:
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        PKG_CONFIG_PATH: "C:/vcpkg/packages/oniguruma_${{ matrix.target == 'windows-x86_64' && 'x64-windows' || 'x86-windows' }}/lib/pkgconfig;C:/vcpkg/installed/${{ matrix.target == 'windows-x86_64' && 'x64-windows' || 'x86-windows' }}/lib/pkgconfig"
       run: |
         rake "release:build:${{ matrix.target }}"
 
