--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -57,7 +57,19 @@ jobs:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
         PKG_CONFIG_PATH: "C:/vcpkg/packages/oniguruma_x64-windows/lib/pkgconfig;C:/vcpkg/installed/x64-windows/lib/pkgconfig"
       run: |
-        rake "release:build:windows-x86_64"
+        # Create junction to shorten paths for Windows command line limits
+        $shortPath = "C:\m"
+        if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse }
+        New-Item -ItemType Junction -Path $shortPath -Target (Get-Location).Path
+
+        try {
+          # Build from shortened path to reduce command line length
+          Set-Location $shortPath
+          rake "release:build:windows-x86_64"
+        } finally {
+          # Clean up junction
+          Remove-Item $shortPath -Force -Recurse
+        }
 
     - name: Create comprehensive test recipe
       run: |
