--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -38,7 +38,18 @@ jobs:
         choco install mingw -y --force
 
         # Install pkg-config for library detection
-        choco install pkg-config -y --force
+        # Use vcpkg to install pkgconf (provides pkg-config.exe)
+        if (Test-Path "C:\vcpkg\vcpkg.exe") {
+          C:\vcpkg\vcpkg.exe install pkgconf:x64-windows
+          # Add vcpkg tools to PATH (contains pkgconf's pkg-config.exe)
+          $vcpkgRoot = "C:\vcpkg"
+          $toolsPath = Join-Path $vcpkgRoot "installed\x64-windows\tools\pkgconf"
+          if (Test-Path $toolsPath) {
+            echo "$toolsPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          }
+        } else {
+          Write-Host "vcpkg not found, pkg-config may not be available"
+        }
 
         # Install oniguruma for mruby-onig-regexp
         # Try vcpkg first, fall back to building from source if needed
