--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -86,7 +86,7 @@ jobs:
         $currentDir = (Get-Location).Path
         $drive = $currentDir.Substring(0, 1)
         $shortPath = "$drive`:\m"
-        if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse }
+        if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse -ErrorAction SilentlyContinue }
         New-Item -ItemType Junction -Path $shortPath -Target $currentDir
 
         try {
@@ -95,7 +95,8 @@ jobs:
           rake "release:build:${{ matrix.target }}"
         } finally {
           # Clean up junction
-          Remove-Item $shortPath -Force -Recurse
+          Set-Location $currentDir
+          if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse -ErrorAction SilentlyContinue }
         }
 
     - name: Test binary
