--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -72,7 +72,7 @@ jobs:
         $currentDir = (Get-Location).Path
         $drive = $currentDir.Substring(0, 1)
         $shortPath = "$drive`:\m"
-        if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse }
+        if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse -ErrorAction SilentlyContinue }
         New-Item -ItemType Junction -Path $shortPath -Target $currentDir
 
         try {
@@ -81,7 +81,8 @@ jobs:
           rake "release:build:windows-x86_64"
         } finally {
           # Clean up junction
-          Remove-Item $shortPath -Force -Recurse
+          Set-Location $currentDir
+          if (Test-Path $shortPath) { Remove-Item $shortPath -Force -Recurse -ErrorAction SilentlyContinue }
         }
 
     - name: Create comprehensive test recipe
