Cache Ruby toolcache in Windows workflows

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -34,6 +34,14 @@ jobs:
           C:\vcpkg\downloads
         key: windows-vcpkg-x86_64-${{ hashFiles('build_config.rb', 'mrbgem.rake') }}
 
+    - name: Cache Ruby
+      uses: actions/cache@v4
+      with:
+        path: |
+          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
+          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
+        key: windows-ruby-3.1
+
     - name: Setup Ruby
       uses: ruby/setup-ruby@v1
       with:
