--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -32,6 +32,14 @@ jobs:
           C:\vcpkg\downloads
         key: windows-vcpkg-${{ matrix.target }}-${{ hashFiles('build_config.rb', 'mrbgem.rake') }}
 
+    - name: Cache Ruby
+      uses: actions/cache@v4
+      with:
+        path: |
+          C:\hostedtoolcache\windows\Ruby\3.1.*\x64
+          C:\hostedtoolcache\windows\Ruby\3.1.*\x86
+        key: windows-ruby-3.1
+
     - name: Setup Zig
       run: |
         $ZigVersion = "0.10.1"
