--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -114,6 +114,7 @@ jobs:
           -DBUILD_SHARED_LIBS=OFF `
           -DCMAKE_INSTALL_PREFIX=$prefix `
           -DCMAKE_C_COMPILER=zig `
+          -DCMAKE_C_COMPILER_ARG1=cc `
           -DCMAKE_C_COMPILER_TARGET=$target
 
         cmake --build $buildDir --target install --config Release
