--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -112,7 +112,7 @@ jobs:
         cmake -S $srcDir -B $buildDir -G "Ninja" `
           -DCMAKE_BUILD_TYPE=Release `
           -DBUILD_SHARED_LIBS=OFF `
-          -DCMAKE_INSTALL_PREFIX=$prefix `
+          -DCMAKE_INSTALL_PREFIX="C:/oniguruma/windows-x86_64" `
           -DCMAKE_C_COMPILER=zig `
           -DCMAKE_C_COMPILER_ARG1="cc --target=$target"
 
