--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -143,6 +143,8 @@ jobs:
     - name: Build mitamae
       env:
         MRUBY_YAML_USE_SYSTEM_LIBRARY: 1
+        ONIGURUMA_PREFIX: "C:/oniguruma/${{ matrix.target }}"
+        VCPKG_ROOT: "C:/vcpkg"
         PKG_CONFIG_PATH: "C:/oniguruma/${{ matrix.target }}/lib/pkgconfig;C:/vcpkg/installed/${{ matrix.target == 'windows-x86_64' && 'x64-windows' || 'x86-windows' }}/lib/pkgconfig"
       run: |
         # Create junction on same drive to shorten paths for Windows command line limits
